--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "express": "^4.16.4",
     "express-http-proxy": "^1.5.0",
     "nocache": "^2.0.0",
+    "walkthrough-compiler": "0.0.2",
     "yargs": "^12.0.2"
   },
   "scripts": {
     "run-example": "./bin/ablayer --url https://news.ycombinator.com --port 9900 examples/hackernews-theme",
+    "compile": "wlkc src/index.md -o .",
     "test": "bash run-tests"
   },
   "devDependencies": {
-    "cookie-parser": "^1.4.4",
     "node-static": "^0.7.11"
   }
 }
