--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
   "dependencies": {
     "express": "^4.16.4",
     "express-http-proxy": "^1.5.0",
+    "mkdirp": "^0.5.1",
     "nocache": "^2.0.0",
+    "opn": "^6.0.0",
     "walkthrough-compiler": "0.0.2",
     "yargs": "^12.0.2"
+  },
+  "optionalDependencies": {
+    "js-beautify": "^1.10.0"
   },
   "scripts": {
     "run-example": "./bin/ablayer --url https://news.ycombinator.com --port 9900 examples/hackernews-theme",
